gcc: Re-run after system updates

--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -1062,7 +1062,8 @@ a050099a416f013bda35832b878d9a57b0cbb231 (gcc-6-branch branch point;
 
 Here's a log of a GCC build run; this is from Git commit
 a050099a416f013bda35832b878d9a57b0cbb231 (gcc-6-branch branch point;
-2016-04-15), run on kepler.SCHWINGE
+2016-04-15), plus *libstdc++ RLIMIT changes* ([[!message-id
+"8760n66mky.fsf@euler.schwinge.homeip.net"]]), run on kepler.SCHWINGE
 and laplace.SCHWINGE.
 
     $ export LC_ALL=C
@@ -1083,8 +1084,8 @@ until these is auto-detected/fixed/ported for GNU Hurd.
 `/include` for GNU Hurd.  Explicit `--enable-multiarch` because *auto check [is
 disabled if] configured with --native-system-header-dir*.
 
-This takes up around 4.8 GiB, and runs for [[4 h 18 min|performance#measure]]
-on kepler.SCHWINGE and [[5 h 6 min|performance#measure]] on laplace.SCHWINGE.
+This takes up around 4.8 GiB, and runs for [[3 h 57 min|performance#measure]]
+on kepler.SCHWINGE and [[3 h 45 min|performance#measure]] on laplace.SCHWINGE.
 
 <!--
 
@@ -1128,8 +1129,6 @@ on kepler.SCHWINGE and [[5 h 6 min|performance#measure]] on laplace.SCHWINGE.
 
     `sed`ed away in `log_build*`.  This comes from `libgomp/configure.tgt`,
     where this is added to `XCFLAGS` for `i[456]86-*-linux*` only.  TODO?
-
-  * Missing `EOWNERDEAD`, `ENOTRECOVERABLE`.  What're they used for?
 
   * `RLIMIT_VMEM`.  Usage kosher?
 
@@ -1275,8 +1274,8 @@ kepler.SCHWINGE and [[5 min|performance#measure]] on laplace.SCHWINGE.
     $ make -k check 2>&1 | tee log_test
     [...]
 
-This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
-39 min|performance#measure]] on laplace.SCHWINGE.
+This runs for [[5 h 23 min|performance#measure]] on kepler.SCHWINGE and [[10 h
+48 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -2747,6 +2746,9 @@ This runs for [[6 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
         G 1:0.6.git20150704-2
 
     [[!message-id "8737sjzp89.fsf@kepler.schwinge.homeip.net"]].
+
+  * libjava testing is broken on kepler.SCHWINGE because of [[!GCC_PR 70719
+    desc="the libjava testsuite does not work with dejagnu 1.6"]].
 
 
 ## Enhancements
