open_issues/gcc: --enable-gnu-unique-object

--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -646,6 +646,10 @@ a050099a416f013bda35832b878d9a57b0cbb231 (gcc-6-branch branch point;
 
   * `--enable-gnu-unique-object`
 
+    On 2016-12-05 noticed that per `gcc -v` output, `gcc version 6.2.1 20161124
+    (Debian 6.2.1-5)` for GNU/Linux is configured with
+    `--enable-gnu-unique-object`, but GNU/Hurd is not.
+
   * `--enable-lto`
 
   * `--enable-indirect-function`
