--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -1061,6 +1061,12 @@ a050099a416f013bda35832b878d9a57b0cbb231 (gcc-6-branch branch point;
     ee1bfdb0d611ed2e1057071f39589e6ebcd87983 `Remove __seg_tls before first
     release`.
 
+  * `--enable-default-pie`
+
+    On 2016-12-05 noticed that per `gcc -v` output, `gcc version 6.2.1 20161124
+    (Debian 6.2.1-5)` for GNU/Linux is configured with
+    `--enable-default-pie`, but GNU/Hurd is not.
+
 
 # Build
 
